<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="sign_in">Please Sign In</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="student_number">Student Number</string>
    <string name="login">Login</string>
    <string name="fill_in_register">Please complete the fields below</string>
    <string name="title_activity_list_questions">ListQuestions</string>
    <string name="title_activity_view_score">ViewScore</string>
    <string name="score">Score:</string>
    <string name="average">Average:</string>
    <string name="title_activity_list_quizes">ListQuizzes</string>
	<string name="week1">Week 1</string>
    <string name="week2">Week 2</string>
    <string name="week3">Week 3</string>
    <string name="week4">Week 4</string>
    <string name="week5">Week 5</string>
    <string name="week6">Week 6</string>
    <string name="week7">Week 7</string>
    <string name="week8">Week 8</string>
    <string name="week9">Week 9</string>
    <string name="week10">Week 10</string>
    <string name="week11">Week 11</string>
    <string name="week12">Week 12</string>
    <string name="week13">Week 13</string>
    <string name="week14">Week 14</string>
    <string name="return_2_quizzes">Return to Quizzes</string>
    <string name="logout">Logout</string>
    
</resources>
