<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    tools:context=".QuizList" >
	
	    <Button
	        android:id="@+id/quiz1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:text="@string/week1"
	        />
	    
	    <Button
	        android:id="@+id/quiz2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/quiz1"
	        android:text="@string/week2"
	        />
	    <Button
	        android:id="@+id/quiz3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/quiz2"
	        android:text="@string/week3"
	        />
	    <Button
	        android:id="@+id/quiz4"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/quiz3"
	        android:text="@string/week4"/>
	    <Button
	        android:id="@+id/quiz5"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/quiz4"
	        android:text="@string/week5"/>
	    <Button
	        android:id="@+id/quiz6"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/quiz5"
	        android:text="@string/week6"/>
	    <Button
	        android:id="@+id/quiz7"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/quiz6"
	        android:text="@string/week7"/>
	    <Button
	        android:id="@+id/quiz8"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/quiz7"
	        android:text="@string/week8"
	        />
	    <Button
	        android:id="@+id/quiz9"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/quiz8"
	        android:text="@string/week9"
	        />
	    <Button
	        android:id="@+id/quiz10"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/quiz9"
	        android:text="@string/week10"
	        />
	    <Button
	        android:id="@+id/quiz11"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/quiz10"
	        android:text="@string/week11"/>
	    <Button
	        android:id="@+id/quiz12"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/quiz11"
	        android:text="@string/week12"/>
	    <Button
	        android:id="@+id/quiz13"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/quiz12"
	        android:text="@string/week13"/>
	    <Button
	        android:id="@+id/quiz14"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/quiz13"
	        android:text="@string/week14"/>
	
	</RelativeLayout>

</ScrollView>